--- a/array.html
+++ b/array.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button onclick="maxnumber()"></button>
+    <button onclick="maxnumber()">Click Me</button>
     <script>
         function maxnumber(){
         var max1 = 0;
